--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
+colorama
 cryptography==41.0.5
+gpt4all==2.0.2
 idna==3.4
 pdfminer.six==20221105
 pycparser==2.21
 requests==2.31.0
 setuptools==68.0.0
+tqdm
 urllib3==2.0.7
 wheel==0.37.1
