make `verbose` a cmd-line argument

--- a/config.json
+++ b/config.json
@@ -1,5 +1,4 @@
 {
-    "verbose": false,
     "model_choice": "orca-mini-3b-gguf2-q4_0.gguf",
     "context_length": 2048,
     "max_output_tokens": 200,
@@ -15,6 +14,7 @@
         "Is there a real-world application or use case for the proposed approach?",
         "Are there any surprising or unexpected findings in the paper?",
         "What datasets and benchmarks are used in the experiments?",
-        "What are keywords you would use to summarize the research?"
+        "What are keywords you would use to summarize the research?",
+        "What are practical applications or domains where the findings of this research could be applied?"
     ]
 }
