--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,3 @@
-model_choice = "orca-mini-3b-gguf2-q4_0.gguf"
-context_length = 2048
-max_output_tokens = 200
 chunk_margin_factor = 0.5
 prompt_template = """You are a research assistant with expertise in analyzing chunks of an article and answering questions based on the text. Be concise and to the point. If the chunk is not relevant for answering the question, just respond blank. Please answer the question: '{question}' based solely on the information in the following chunk of the article:\n{chunk}\n\nAnswer:"""
 summarize_template = """You are a research assistant tasked with summarizing answers from different chunks of an article. Summarize the answers to the question: '{question}'.\nAnswers: {answers}\n\nSummarized answer:"""
@@ -18,3 +15,15 @@ questions = [
     "What are keywords you would use to summarize the research?",
     "What are practical applications or domains where the findings of this research could be applied?"
 ]
+
+[models]
+
+    [models.local]
+    model_name = "orca-mini-3b-gguf2-q4_0.gguf" 
+    context_length = 2048
+    max_output_tokens = 200
+
+    [models.openai]
+    model_name = "gpt-3.5-turbo"
+    context_length = 4096
+    api_key = "sk-..."
