--- a/config.toml
+++ b/config.toml
@@ -26,4 +26,4 @@ questions = [
     [models.openai]
     model_name = "gpt-3.5-turbo"
     context_length = 4096
-    api_key = "sk-..."
+    api_key = "" # leave blank if specified in environment variable (OPENAI_API_KEY)
