--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,39 @@
+annotated-types==0.6.0
+anyio==3.7.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
 colorama
 cryptography==41.0.5
+distro==1.8.0
+filelock==3.13.1
+fsspec==2023.10.0
 gpt4all==2.0.2
+h11==0.14.0
+httpcore==1.0.1
+httpx==0.25.1
+huggingface-hub==0.17.3
 idna==3.4
+iniconfig
+numpy==1.26.1
+openai==1.1.1
+packaging 
 pdfminer.six==20221105
+pluggy
 pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
+pytest
+PyYAML==6.0.1
+regex==2023.10.3
 requests==2.31.0
+safetensors==0.4.0
 setuptools==68.0.0
+sniffio==1.3.0
+tokenizers==0.14.1
+toml
 tqdm
+transformers==4.35.0
+typing_extensions==4.8.0
 urllib3==2.0.7
 wheel==0.37.1
